--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,80 @@
 .App {
   text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  background-image: url("https://ak.picdn.net/shutterstock/videos/1015835383/thumb/7.jpg");
+  background-size: 1375px;
 }
 
 
-.logo{
-  max-height: 50px;
+.container {
+  display: flex;
+  flex-direction: column ;
+  justify-content: center; 
+  height: 1000px;
+  width: 500px;
+  /* border: 5px;
+  border-style: solid; */
+  /* border-color: black; */
+  background-color: orange;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  padding-left: 50px;
+  padding-right: 50px;
+  margin: 150px 300px;
+  
 }
 
-.menu{
+.logo {
+height: 300px;
+width: 500px;
+align-self: center;
+margin-bottom: 25px;
+}
+  
+.headers {
+  font-size:large;    
+}
+
+/* /* #topheader {
+  font-size: 50px;
+  letter-spacing: 3px; */
+
+
+
+#AdminPortaltext {
+font-size: 30px;
+letter-spacing: 8px;
 text-align: center;
+background-color: yellow;
+
+
 }
 
-.box{
-  padding: 10px;
-  margin:10px;
-  background-color: #ff9d3b;
+button {
+  border-radius: 8px;
+  margin: 30px;
+  transition-duration: 0.4s;
+  color: orange;
 }
+/* button:hover {
+  background-color: orange;
+  color: white;
+} */
+
+
+.button {
+  font-size: 25px;
+  margin: 30px;
+  color: orange
+
+}
+
+.footer {
+  font-size: 25px;
+}
+/* #button1:hover {
+    background-color: orange;
+    color: white;
+} */
+  
+
