--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,7 @@
 }
 
 
-.logo{
-  max-height: 50px;
-}
+
 
 .menu{
 text-align: center;
@@ -26,6 +24,8 @@ text-align: center;
   /* background-size: 1700px; */
   background-size: 100vw 100%;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
   overflow: hidden;
 }
 
@@ -34,18 +34,13 @@ text-align: center;
   margin: auto;
   flex-direction: column ;
   justify-content: center; 
-  /* height: 1000px; */
   min-height: 100%;
   width: 500px;
-  /* border: 5px;
-  border-style: solid; */
-  /* border-color: black; */
   background-color: orange;
   padding-top: 100px;
   padding-bottom: 100px;
   padding-left: 50px;
   padding-right: 50px;
-  /* margin: 150px 300px; */
 }
 
 .logo {
@@ -58,10 +53,6 @@ text-align: center;
 .headers {
   font-size:large;    
 }
-
-/* /* #topheader {
-  font-size: 50px;
-  letter-spacing: 3px; */
 
 #AdminPortaltext {
   font-size: 30px;
@@ -127,25 +118,18 @@ color: rgb(90, 88, 88);
 
 }
 
-.classes {
-    display: block;
-    font-size: 16px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    color: #444;
-    line-height: 1.3;
-    padding: .6em 1.4em .5em .8em;
-    width: 100%;
-    max-width: 100%; /* useful when width is set to anything other than 100% */
-    box-sizing: border-box;
-    margin: 0;
-    border: 1px solid #aaa;
-    box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
-    /* border-radius: .5em; */
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    appearance: none;
-    background-color: #fff;
+.form-button {
+    display: inline-block;
+    padding: 8px;
+    margin-top: 8px;
+    margin-bottom: 15px;
+    margin-left: 8px;
+    margin-right: 8px;
+    color: black;
+    text-decoration: none;
+    background: rgb(253, 249, 122);
+    cursor: pointer;
+    box-shadow: 0 8px 6px -6px black;
 }
 
 /* MAILCHIMP- SEND EMAILS COMPONENT Put this CSS here */
